@@ -6,7 +6,6 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/build \
 	-I$(top_srcdir)/lib \
-	-I$(top_srcdir)/intl \
 	-I$(top_srcdir)/misc \
 	-I$(top_srcdir)/popt \
 	@INCPATH@
@@ -25,10 +24,10 @@ pkgbindir = @RPMCONFIGDIR@
 pkgbin_PROGRAMS = rpmgettext rpmputtext
 
 rpmgettext_SOURCES =	rpmgettext.c
-rpmgettext_LDADD =	$(mylibs) @LIBMISC@
+rpmgettext_LDADD =	$(mylibs) @BZIP2LIB@ @LIBMISC@
 
 rpmputtext_SOURCES =	rpmgettext.c
-rpmputtext_LDADD =	$(mylibs) @LIBMISC@
+rpmputtext_LDADD =	$(mylibs) @BZIP2LIB@ @LIBMISC@
 
 ## Dumpdb requires fprint.o (in libmisc) and this requires realpath
 ## (from libmisc).
