@@ -42,6 +42,7 @@
 	- add sparcv9 architecture.
 	- add --freshen to usage message (#4823).
 	- suggested changes to docs from Ken Estes (#4451).
+	- link libbz2.a statically to avoid rpm->bzip2 dependence for now.
 
 3.0.1 -> 3.0.2
 	- eliminate armv4 entries from rpmrc (Andrew E. Mileski).
